<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".presentation.screens.features.chating.userprofile.UserProfileFragment">


    <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blue"
            android:text="@string/save"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
    />

    <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/blue"
            android:text="@string/cancel"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
    />


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_img"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/save"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintWidth_percent="0.6"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:civ_border_color="#FFFFFF"
            android:src="@drawable/person"
            app:civ_border_width="1dp"/>


    <android.support.constraint.Guideline
            android:id="@+id/guid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.3"
    />


    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/person_img"
            android:id="@+id/shadow"
            android:src="@drawable/dd"
            app:layout_constraintStart_toStartOf="@id/person_img"
            app:layout_constraintEnd_toEndOf="@id/person_img"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintWidth_percent="0.6"
    />

    <ImageView android:layout_width="50dp"
               android:layout_height="50dp"
               app:layout_constraintBottom_toBottomOf="@+id/shadow"
               app:layout_constraintTop_toTopOf="@+id/shadow"
               app:layout_constraintStart_toStartOf="@id/shadow"
               app:layout_constraintEnd_toEndOf="@id/shadow"
               android:src="@drawable/camera"
    />
    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:text="ايمان عبدالواحد "
              android:id="@+id/name"
              app:layout_constraintTop_toBottomOf="@+id/person_img"
              android:textColor="@color/black"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:gravity="center"
              android:layout_marginTop="10dp"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/delete_chat"
              android:textColor="@color/black"
              android:text="@string/delete_chat"
              app:layout_constraintTop_toBottomOf="@+id/name"
              android:drawablePadding="5dp"
              android:textSize="18sp"
              android:layout_marginStart="15dp"
              android:layout_marginTop="30dp"
              android:drawableStart="@drawable/profile"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/profile"
              android:textColor="@color/black"
              android:text="@string/personal_info"
              app:layout_constraintTop_toBottomOf="@+id/delete_chat"
              android:drawablePadding="5dp"
              android:layout_marginStart="15dp"
              android:textSize="18sp"
              android:layout_marginTop="10dp"
              android:drawableStart="@drawable/profile"
    />


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/change_pass"
              android:textColor="@color/black"
              android:text="@string/changepass"
              app:layout_constraintTop_toBottomOf="@+id/profile"
              android:drawablePadding="5dp"
              android:layout_marginStart="15dp"
              android:layout_marginTop="10dp"
              android:textSize="18sp"
              android:drawableStart="@drawable/profile"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/blocklist"
              android:textColor="@color/black"
              android:text="@string/blocklist"
              android:textSize="18sp"
              app:layout_constraintTop_toBottomOf="@+id/change_pass"
              android:drawablePadding="5dp"
              android:layout_marginStart="15dp"
              android:layout_marginTop="10dp"
              android:drawableStart="@drawable/profile"
    />
</android.support.constraint.ConstraintLayout>